--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('_1321f0c9-3b77-4f20-817a-bcd79a6ffd70.jpg');
+    background-image: url('assets/docs/_1321f0c9-3b77-4f20-817a-bcd79a6ffd70.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -76,7 +76,7 @@ body.dark-mode .card-title, body.dark-mode .card-text {
 }
 
 /* Estilo general para las secciones de habilidades */
-#skills, #experience {
+#skills{
     padding: 10px;
     background-color: #0a0a0a;
     opacity: 0.8;
@@ -201,4 +201,44 @@ body.dark-mode .card-title, body.dark-mode .card-text {
 
 #contact{
     opacity: 0.8;
+}
+
+/* Estilo para la sección de experiencia */
+#experience {
+    padding: 50px 0;
+    background-color: #f9f9f9;
+}
+
+#experience .container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+#experience h2 {
+    margin-bottom: 30px;
+    font-size: 2.5rem;
+}
+
+.experience-item {
+    margin-bottom: 40px;
+}
+
+.experience-item h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.experience-item h4 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    color: #555;
+}
+
+.experience-item p {
+    margin-bottom: 10px;
+}
+
+.experience-item i {
+    margin-right: 5px;
+    color: #007bff;
 }
