--- a/css/styles.css
+++ b/css/styles.css
@@ -11045,3 +11045,11 @@ html {
 .copyright {
   background-color: #1a252f;
 }
+
+.alert-overlay {
+  position: fixed;
+  top: 83px;
+  right: 20px;
+  z-index: 1050;
+  min-width: 300px;
+}
